LPD-67889 test: ensure a related object entry can be obtained by external reference code